added flyway database scripts and entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=${postgres.url}
+spring.datasource.username=${postgres.username}
+spring.datasource.password=${postgres.password}
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.flyway.locations=classpath:db.migration
