--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>book-sharing</name>
     <description>Internship project for Book Sharing</description>
-
     <properties>
         <java.version>1.8</java.version>
         <javax.validation.version>2.0.1.Final</javax.validation.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,8 +57,28 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <groupId>org.springframework.boot</groupId>
         </dependency>
-    </dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>4.2.2.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -69,5 +87,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
