--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=${postgres.password}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-
+spring.jpa.show-sql=true
 spring.flyway.locations=classpath:db.migration
