--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
