--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=${postgres.password}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.flyway.locations=classpath:db.migration
 
 server.error.whitelabel.enabled=false
