added error controller and error pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 spring.flyway.locations=classpath:db.migration
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
