--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.flyway.locations=classpath:db.migration
 
 server.error.whitelabel.enabled=false
 server.error.path=/error
+
+spring.servlet.multipart.max-file-size=4000KB
+spring.servlet.multipart.max-request-size=4000KB
